# thoughttree

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  LICENSE.md  README.md  bunfig.toml  package.json  pnpm-lock.yaml  vite.config.ts
.claude/skills/mermaid-diagrams/: SKILL.md
.github/workflows/: release.yml  test.yml
backlog/: 005-agent-node-open-side-panel.md
scripts/: build-sidecar.sh  release.sh
src/: App.css  App.tsx
src-gpui/: BUILD-NOTES.md  Cargo.toml  README.md
src-gpui/src/: app.rs  main.rs  state.rs  theme.rs
src-gpui/src/graph/: mod.rs  model.rs  mutations.rs  types.rs
src-gpui/src/views/: canvas.rs  mod.rs  side_panel.rs  text_input.rs  toolbar.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/acp/: CLAUDE.md  Cargo.toml  README.md  package.json
src-tauri/acp/src/: main.rs
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/backend/: config.rs  mod.rs  runtime.rs  state.rs  types.rs
src-tauri/src/backend/acp/: clients.rs  mod.rs  process.rs  sessions.rs
src-tauri/src/backend/commands/: chat.rs  mod.rs  projects.rs  providers.rs  summary.rs
src/components/FileAutocomplete/: index.tsx  styles.css
src/components/Graph/: AgentNode.tsx  AlignmentGuides.tsx  ContextMenu.tsx  MarkdownContent.tsx  UserNode.tsx  index.tsx  styles.css
src/components/ModelSelector/: index.tsx  styles.css
src/components/PermissionDialog/: index.tsx  styles.css
src/components/ProjectOpeningWizard/: ProjectOpeningWizard.css  index.tsx
src/components/ProviderSelector/: ProviderSelector.test.tsx  index.tsx  styles.css
src/components/SettingsDialog/: index.tsx  styles.css
src/components/SetupWizard/: SetupWizard.css  index.tsx
src/components/SidePanel/: EditArea.tsx  GenerationControls.tsx  SidePanel.test.tsx  index.tsx  styles.css  useImageAttachments.ts  usePanelResize.ts
src/components/Toolbar/: Toolbar.css  index.tsx
src/hooks/: useNodeGeneration.ts  useSummaryGeneration.test.ts  useSummaryGeneration.ts
src/lib/: caretCoordinates.ts  graphLayout.ts  imageUtils.ts  logger.ts  tauri.ts
src/lib/graph/: index.ts  model.test.ts  model.ts  mutations.test.ts  mutations.ts  projection.test.ts  projection.ts  serialize.test.ts  serialize.ts  types.ts
src/store/: useGraphStore.delete.test.ts  useGraphStore.test.ts  useGraphStore.ts  useProviderStore.ts  useUIStore.ts
src/test/: setup.ts
src/types/: index.ts
