[package]
name = "thoughttree-gpui"
version = "0.0.1"
edition = "2021"
description = "ThoughtTree front-end prototype using Zed's GPUI framework"
publish = false

# GPUI is not published on crates.io. The Zed monorepo is the source of truth.
# Pin a specific commit so the prototype keeps building when Zed's main moves.
# Update the rev when intentionally tracking newer GPUI APIs.
[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "main" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
smol = "2"

[profile.dev]
opt-level = 0

[profile.release]
lto = "thin"
codegen-units = 1
