[package]
name = "thoughttree"
version = "0.2.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "thoughttree_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ACP dependencies
agent-client-protocol = { version = "0.9", features = ["unstable"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "process", "io-util", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
dirs = "5"

[profile.release]
lto = true           # Link-Time Optimization (smaller binary)
strip = true         # Strip symbols
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller binary, no stack unwinding

[profile.dev]
incremental = true   # Faster incremental builds

[profile.dev.package."*"]
opt-level = 2        # Optimize dependencies even in dev mode

