[package]
name = "acp-client-prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-client-protocol = "0.7.0"
anyhow = "1.0.100"
async-trait = "0.1.89"
futures = "0.3"
tokio = { version = "1.48.0", features = ["full", "process"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
